# rich-demo

./: pyproject.toml  readme.md
rich_demo/: __main__.py
