[project]
name = "rich-demo"
version = "0.2.0"
description = "Tool to check the graphic features of a terminal using the rich library."
authors = [{ name = "Chema Cortés", email = "dextrem@gmail.com" }]
requires-python = ">=3.9.0"
readme = "readme.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = ["rich>=15.0.0"]

[project.urls]
Homepage = "https://github.com/chemacortes/rich-demo"

[project.scripts]
rich-demo = "rich_demo.__main__:run"

[project.entry-points."pipx.run"]
rich-demo = "rich_demo.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
